add link for n+1

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -104,7 +104,7 @@ experience:
     Prior to that, I was SVP of Marketing at Inuvo Inc. [AMEX:INUV] where I led Product Marketing & Client Services. I joined Inuvo, Inc. through the acquisition of Litmus Media, Inc. where I served as Director of Advertising Products & Monetization.
   items:
     - company: N+1 Digital 
-      link: 
+      link: 'http://npluss1.digital' 
       tags: Part-time, remote
       date: 10.2021 - present 
       role: Fractional CMO + Growth Consultant
